--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@
                 border-radius: 15px;
             }
         
-
+         #main li:hover
+        {
+            cursor: pointer;
+        }
            #hide1:hover{
                display:block;
            }
