--- a/index.html
+++ b/index.html
@@ -188,10 +188,11 @@
                 border-radius: 8px;
                 background:#0000DD;
                 color:white;
-                font-size:3.6vw;
+                font-size:2.7vw;
                 text-align: center;
                 border:none;
-                
+                padding-bottom:5px; 
+                padding-top:5px; 
             }
             #inputt:focus{
                 outline:none;
