--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <div id="head">
             <div id="heading">
                 <div style="height:17px"></div>
-                <input id="inputt" type="text" ng-model="test" placeholder="write your shortcut here.">
+                <input id="inputt" type="text" ng-model="test" placeholder="search shortcut here.">
                 <div style="height:17px"></div>
             </div>
             <div class="pop"></div>
