--- a/index.html
+++ b/index.html
@@ -201,6 +201,10 @@
     color: white;
     opacity: 0.5; /* Firefox */
 }
+	    @media (max-width:600px){
+    #inputt{
+    font-size:14pt;
+}}
     </style>
    <!--<link rel="stylesheet" type="text/css" href="decoration.css">--> 
 </head>
